# syncast

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md
.github/: SOCIAL_PREVIEW.md  og-image-source.html
docs/: ARCHITECTURE.md  GOAL.md  HANDOFF.md  ROADMAP.md  calibration_v2_design.md  calibration_v4_status.md  goal_completion_audit_2026-05-12.md  goal_completion_audit_2026-05-13.md  icon-integration-audit.md  icon-prompts.md  release-verify-report.md  requirements_2026-05-03.md  requirements_2026-05-04.md  requirements_2026-05-06.md  requirements_2026-05-07.md  requirements_2026-05-12.md  requirements_2026-05-13.md  requirements_2026-05-16.md  round10_arch_A_passive.md  round10_drift_history.csv  round10_validation_protocol.md  round11_acceptance.md  round11_manual_first_design.md
proto/: ipc-schema.md
scripts/: _bundle-dylibs.sh  bootstrap.sh  build-owntone.sh  build.sh  calibration_apply_test.sh  calibration_interrupt_test.sh  calibration_log_summary.py  calibration_status.sh  calibration_test.sh  calibration_watch.sh  coreaudio_default_output.c  coreaudio_default_output_guard.sh  dev-run.sh  direct_stereo_smoke_test.sh  drift_summary.py  drift_test.sh  drift_test_v2.sh  drm_manual_session.py  drm_manual_session_tests.py  drm_path_audit.py  drm_path_audit_tests.py  event_mutation_test.sh  (+45 more)
sidecar/: README.md  pyproject.toml  syncast-sidecar.spec
sidecar/src/syncast_sidecar/: __init__.py  __main__.py  airplay2.py  audio_socket.py  device_manager.py  jsonrpc.py  log.py  owntone_backend.py  server.py
sidecar/tests/: test_jsonrpc.py
(+82 files in other folders)
