[project]
name = "syncast-sidecar"
version = "0.1.0"
description = "AirPlay 2 multi-target streaming sidecar for SyncCast"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SyncCast Contributors" }]
dependencies = [
  # Discovery + pairing only. Streaming is delegated to OwnTone — see ADR-006.
  "pyatv>=0.17.0",
  "zeroconf>=0.131.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
syncast-sidecar = "syncast_sidecar.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/syncast_sidecar"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
